# ai-on-the-edge-backend

./: Dockerfile  README.md  makefile  pyproject.toml  setup.cfg
.github/: settings.yml
.github/workflows/: lint-check.yml  settings.yml  update-repo-settings.yml  update_branch_protection_rules.yml
.terraform/: main.tf
.terraform/branch_protection/: main.tf
backend/data_service/: main.py
backend/data_service/data_processors/: base_measurement_processor.py  data_processor_factory.py  electricity_meausrement_processor.py  gas_measurement_processor.py  water_measurement_processor.py
backend/data_service/data_stores/: base_data_store.py  data_store_factory.py  electricity_data_store.py  gas_data_store.py  water_data_store.py
backend/data_service/models/: hardware_status.py  measurement.py
backend/data_service/tests/: conftest.py  test_main.py
backend/user_service/: main.py  registration_workflow.py
backend/user_service/models/: registration_confirmation_model.py  registration_status.py  user_registration_model.py  user_registration_status.py
backend/user_service/tests/: conftest.py  test_main.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/repo_settings/: main.tf
terraform/repository_settings/: main.tf
