[tool.poetry]
name = "ai-on-the-edge-backend"
description = "Backend of the project of 'Ai on the edge'"
version = "0.1.0"
authors = ["peterpal00"]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.5"

[tool.poetry.group.data_service.dependencies]


