[tool.poetry]
name = "ai-on-the-edge-backend"
description = "Backend of the project of 'Ai on the edge'"
version = "0.1.0"
authors = ["peterpal00"]


[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.5"
sqlalchemy = "^2.0.7"

[tool.poetry.group.data_service.dependencies]
influxdb = "^5.3.1"

[tool.poetry.group.user_service.dependencies]
transitions = "^0.6.4"
mongoengine = "^0.27.0"

[tool.poetry.group.test.dependencies]
black = "^22.10.0"
flake8 = "^5.0.0"
flake8-bugbear = "^22.10.17"
flake8-return = "^1.2.0"
flake8-simplify = "^0.19.3"
flake8-eradicate = "^1.4.0"
flake8-variables-names = "^0.0.5"
isort = "^5.10.0"
mypy = "<1.0.0"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.mypy]
plugins = "pydantic.mypy"
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "influxdb.*"
]
ignore_missing_imports = true

[tool.isort]
line_length = 120
profile = "black"
known_first_party = ["backend"]
no_lines_before = ["LOCALFOLDER"]